@@ -15,6 +15,9 @@
    	   "TestWing::Wingman::EchoJson" : {
               "phase" : "EchoJson"
 	   },
+   	   "Wingman::Plugin::SendTemplatedEmail" : {
+              "phase" : "SendTemplatedEmail"
+	   },
         }
     },
     "api_key_permissions" : [
