@@ -1,0 +1,22 @@
+[% me.real_name || me.display_name %],
+
+To reset your password click on this link: 
+
+https://[% sitename %]/account/reset-password-code?code=[% code %]
+
+
+Or follow these instructions:
+
+1) Go to https://[% sitename %]/account/reset-password-code
+
+2) Enter "[% code %]" in the reset code field.
+
+3) Enter a new password into the password fields.
+
+4) Click "Save".
+
+NOTE: The password reset code contained in this email is only valid for 24 hours.
+
+
+If you did not request this password reset, you can ignore this message.
+
