@@ -1,0 +1,8 @@
+This mkit is used by the account management system when the user asks for a password reset.
+
+PARAMS
+
+me = A describe of a user object this message will be sent to including private info.
+
+code = The reset string.
+
