@@ -17,6 +17,9 @@ make_path('/data/'.$project.'/lib/'.$project.'/DB/Result');
 make_path('/data/'.$project.'/etc');
 make_path('/data/'.$project.'/bin/setup');
 make_path('/data/'.$project.'/var');
+make_path('/data/'.$project.'/var/mkits');
+make_path('/data/'.$project.'/var/mkits/generic.mkit');
+make_path('/data/'.$project.'/var/mkits/reset_password.mkit');
 make_path('/data/'.$project.'/dbicdh/_common/deploy/1');
 make_path('/data/'.$project.'/views');
 make_path('/data/'.$project.'/views/admin');
@@ -55,6 +58,14 @@ template($tt,'bin/web.psgi', $vars);
 template($tt,'bin/rest.psgi', $vars);
 template($tt,'bin/setup/install_perl_modules.sh', $vars);
 template($tt,'dbicdh/_common/deploy/1/install_admin.pl', $vars);
+template($tt,'var/mkits/generic.mkit/documentation.txt', $vars);
+template($tt,'var/mkits/generic.mkit/manifest.json', $vars);
+template($tt,'var/mkits/generic.mkit/body.html', $vars);
+template($tt,'var/mkits/generic.mkit/body.txt', $vars);
+template($tt,'var/mkits/reset_password.mkit/documentation.txt', $vars);
+template($tt,'var/mkits/reset_password.mkit/manifest.json', $vars);
+template($tt,'var/mkits/reset_password.mkit/body.txt', $vars);
+template($tt,'var/mkits/reset_password.mkit/body.html', $vars);
 
 # set up views, using alternate template tags since they're templates
 my $t_alt = Template->new({ABSOLUTE => 1, START_TAG => quotemeta('[%['), END_TAG => quotemeta(']%]')});
@@ -64,6 +75,9 @@ template($t_alt,'views/error.tt', $vars);
 template($t_alt,'views/status_include.tt', $vars);
 template($t_alt,'views/admin/users.tt', $vars);
 template($t_alt,'views/admin/user.tt', $vars);
+template($t_alt,'views/admin/wingman.tt', $vars);
+template($t_alt,'views/admin/wingman_job.tt', $vars);
+template($t_alt,'views/admin/wingman_tube.tt', $vars);
 template($t_alt,'views/admin/footer_include.tt', $vars);
 template($t_alt,'views/admin/header_include.tt', $vars);
 template($t_alt,'views/account/apikey_form_include.tt', $vars);
