@@ -9,12 +9,9 @@
            "default_tube" : "wingman",
 	},
         "plugins" : {
-  # 	   "TestWing::Wingman::HelloWorld" : {
-  #            "phase" : "howdy"
-#	   },
- #  	   "TestWing::Wingman::EchoJson" : {
-  #            "phase" : "EchoJson"
-#	   },
+	   "Wing::Wingman::SendTemplatedEmail" : {
+		"phase" : "SendTemplatedEmail",
+	   },
         }
     },
     "api_key_permissions" : [
