@@ -1,0 +1,18 @@
+{
+    "renderer" : ["TT", {"template_parameters" : {"INCLUDE_PATH" : "/data/TGC/views"}, "strict" : 0 }],
+    "header" : [
+        { "To" : "[% me.real_name || me.display_name %] <[% me.email %]>" },
+        { "From" : "Wing <noreply@wingapi.com>" },
+        { "Subject" : "[% subject %]" }
+    ],
+    "alternatives" : [
+        { 
+            "type" : "text/plain",
+            "path" : "body.txt"
+        },
+        { 
+            "type" : "text/html",
+            "path" : "body.html"
+        }
+    ] 
+}
