@@ -1,0 +1,16 @@
+<p>[% me.real_name || me.display_name %],</p>
+
+<p>To reset your password <a href="https://[% sitename %]/account/reset-password-code?code=[% code %]">click here</a>.</p>
+
+<p>Or follow these instructions:</p>
+<ol>
+<li>Go to <a href="https://[% sitename %]/account/reset-password-code">https://[% sitename %]/account/reset-password-code</a></li>
+<li>Enter "<b>[% code %]</b>" in the <b>reset code</b> field.</li>
+<li>Enter a new password into the password fields.</li>
+<li>Click <b>Save</b>.</li>
+</ol>
+
+<p><b>NOTE:</b> The password reset code contained in this email is only valid for 24 hours.</p>
+
+<p>If you did not request this password reset, you can ignore this message.</p>
+
